-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.5.6, 6.7.1
-
5cf87f191 (dev), 87b999b0f (6.8), 74350daf7 (tqtc/lts-6.5)
Reproducer attached. Reproducible with 6.7.1 and 6.5.6.
Build, run, and click 2 buttons as they say so. Then crash happens upon the 2nd button being clicked, i.e. a new website is being loaded. But if changing
offTheRecord: false
to
offTheRecord: true
then everything just works fine.
For Gerrit Dashboard: QTBUG-126312 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
569636,10 | Prevent OTR to non-OTR profile switching when the storage name is empty | dev | qt/qtwebengine | Status: MERGED | +2 | 0 |
582866,2 | Prevent OTR to non-OTR profile switching when the storage name is empty | 6.8 | qt/qtwebengine | Status: MERGED | +2 | 0 |
582906,1 | Prevent OTR to non-OTR profile switching when the storage name is empty | 6.7 | qt/qtwebengine | Status: ABANDONED | 0 | 0 |
624030,4 | Prevent OTR to non-OTR profile switching when the storage name is empty | tqtc/lts-6.5 | qt/tqtc-qtwebengine | Status: MERGED | +2 | 0 |