Prevent OTR to non-OTR profile switching when the storage name is empty

When switching from profile from OTR to non-OTR requires valid storage
name. If it not there, then display a warning message and and don't
switch to disk based behavior.

Fixes: QTBUG-126312
Pick-to: 6.7 6.8 6.2
Change-Id: Id689c8b280b4070b9ecbf11c6001685ac4ffd2f3
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>